服务器打包版

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -42,11 +42,11 @@
 	</head>
 
 	<body>
-		<div th:replace="/commons/bar::topbar"></div>
+		<div th:replace="commons/bar.html::topbar"></div>
 		<div class="container-fluid">
 			<div class="row">
 
-				<div th:replace="/commons/bar::#slidebar(urlActive='dashboard')"></div>
+				<div th:replace="commons/bar.html::#slidebar(urlActive='dashboard')"></div>
 				<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
 					<div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;">
 						<div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
